import "MetricAlarm.proto";
package topstack_MonitorQuery;

option java_package = "com.transcend.monitor.message";
option java_outer_classname = "PutMetricAlarmMessage";


message PutMetricAlarmRequest {
    required bool typeId = 418;
    required string requestId = 1;
    required string callerAccessKey = 2;
    optional string action = 3 [default = ""];
    required string namespace = 4;
    required MetricAlarmToPut metricAlarm = 5;
}

message PutMetricAlarmResponse {
    required bool typeId = 419;
    required string requestId = 1;
    required string callerAccessKey = 2;
    required MetricAlarm metricAlarm = 3;
}
